--- a/index.html
+++ b/index.html
@@ -43,5 +43,10 @@
         </div>
     </div>
   </header>
+  <section class="representation">
+    <div class="img-box">
+      <img src="img/server-bcg.jpg" alt="" class="representation-img">
+    </div>
+  </section> 
 </body>
 </html>
