--- a/index.html
+++ b/index.html
@@ -12,41 +12,41 @@
 </head>
 <body>
   <header class="header">
-    <div class="top-header">
-      <div class="header-container">
-          <div class="phone">
-            <a href="tel:+74951375245" class="link">
-              <i class="fa fa-phone-square" aria-hidden="true"></i>
-              <span>+7 495 137 52 45</span>
-            </a>
-          </div>
-          <div class="mail">
+    <div class="header-bcg">
+      <img src="img/server-bcg.jpg" alt="" class="header-img">
+    </div>
+    <div class="header-top-block">
+      <div class="header-top-block-container">
+        <div class="header-logo-box">
+          <a href="#" class="logo-link"><img src="img/LogoProtect_2.png" alt="" class="logo-img"></a>
+        </div>
+        <nav class="header-nav">
+          <ul class="header-nav-list">
+              <li class="header-nav-item"><a href="#" class="header-nav-link active">Главная</a></li>
+              <li class="header-nav-item"><a href="#" class="header-nav-link">Оборудование</a></li>
+              <li class="header-nav-item"><a href="#" class="header-nav-link">Контакты</a></li>
+            </ul>
+        </nav>
+        <div class="header-top-block-contact">
+          <div class="header-top-block-phone">
+              <a href="tel:+74951375245" class="link">
+                <i class="fa fa-phone-square" aria-hidden="true"></i>
+                <span>+7 495 137 52 45</span>
+              </a>
+            </div>
+            <div class="header-top-block-mail">
               <a href="mailto:info@upsprotect.ru" class="link">
-                  <i class="fa fa-envelope" aria-hidden="true"></i>
+                <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>info@upsprotect.ru</span>
               </a>
-          </div>
-      </div>   
-    </div>
-    <div class="bottom-header">
-        <div class="header-container">
-          <div class="logo-box">
-            <a href="#" class="logo-link"><img src="img/LogoProtect_2.png" alt="" class="logo"></a>
-          </div>
-          <nav class="nav">
-            <ul class="nav-list">
-              <li class="nav-item"><a href="#" class="nav-link active">Главная</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">Оборудование</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">Контакты</a></li>
-            </ul>
-          </nav>
-        </div>
+            </div>
+            <div class="header-top-block-search">
+              <i class="fa fa-search" aria-hidden="true"></i>
+            </div>
+        </div>   
+      </div>
     </div>
   </header>
-  <section class="representation">
-    <div class="img-box">
-      <img src="img/server-bcg.jpg" alt="" class="representation-img">
-    </div>
-  </section> 
+  
 </body>
 </html>
