add info section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,17 @@
         </div>   
       </div>
     </div>
+    <div class="information">
+      <div class="information-container">
+        <div class="information-img-box">
+          <img src="img/PowerNet-6-10-kVA-1-e1518294399406.png" alt="" class="information-img">
+        </div>
+        <div class="information-header-box">
+          <h1 class="information-header">Protect PowerNet 19"</h1>
+        </div>
+      </div>
+      
+    </div>
   </header>
   
 </body>
