--- a/index.html
+++ b/index.html
@@ -6,56 +6,43 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&subset=latin,latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Play:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> 
   <title>Protect Power Systems | Российская торговая марка источников бесперебойного питания</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="header">
-    <div class="header-bcg">
-      <img src="img/server-bcg.jpg" alt="" class="header-img">
+    <div class="header__bcg">
+      <img src="img/server-bcg.jpg" alt="ИБП для серверов" class="header__img">
     </div>
-    <div class="header-top-block">
-      <div class="header-top-block-container">
-        <div class="header-logo-box">
-          <a href="#" class="logo-link"><img src="img/LogoProtect_2.png" alt="" class="logo-img"></a>
+    <div class="header__top">
+      <ul class="header__container">
+        <div class="header__logo-box">
+          <a href="#" class="logo-link"><img src="img/LogoProtect_2.png" alt="Источники бесперебойного питания Protect" class="header__logo"></a>
         </div>
-        <nav class="header-nav">
-          <ul class="header-nav-list">
-              <li class="header-nav-item"><a href="#" class="header-nav-link active">Главная</a></li>
-              <li class="header-nav-item"><a href="#" class="header-nav-link">Оборудование</a></li>
-              <li class="header-nav-item"><a href="#" class="header-nav-link">Контакты</a></li>
-            </ul>
+        <nav class="header__nav">
+          <ul class="header__nav-list">
+            <li class="header__nav-item"><a href="#" class="header__nav-link">Главная</a></li> 
+            <li class="header__nav-item"><a href="#" class="header__nav-link">Оборудование</a></li>
+            <li class="header__nav-item"><a href="#" class="header__nav-link">Контакты</a></li>
+          </ul>
         </nav>
-        <div class="header-top-block-contact">
-          <div class="header-top-block-phone">
-              <a href="tel:+74951375245" class="link">
-                <i class="fa fa-phone-square" aria-hidden="true"></i>
-                <span>+7 495 137 52 45</span>
-              </a>
-            </div>
-            <div class="header-top-block-mail">
-              <a href="mailto:info@upsprotect.ru" class="link">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span>info@upsprotect.ru</span>
-              </a>
-            </div>
-            <div class="header-top-block-search">
-              <i class="fa fa-search" aria-hidden="true"></i>
-            </div>
-        </div>   
-      </div>
-    </div>
-    <div class="information">
-      <div class="information-container">
-        <div class="information-img-box">
-          <img src="img/PowerNet-6-10-kVA-1-e1518294399406.png" alt="" class="information-img">
-        </div>
-        <div class="information-header-box">
-          <h1 class="information-header">Protect PowerNet 19"</h1>
+        <div class="header__contact">
+          <a href="tel:+74951375245" class="header__contact-link">
+            <svg class="header__contact-icon">
+                <use xlink:href="img/sprite.svg#icon-phone"></use>
+            </svg>
+            <span>+7 495 137 52 45</span>
+          </a>
+          <a href="mailto:info@upsprotect.ru" class="header__contact-link">
+            <svg class="header__contact-icon">
+                <use xlink:href="img/sprite.svg#icon-envelop"></use>
+            </svg>
+            <span>info@upsprotect.ru</span>
+          </a>
         </div>
       </div>
-      
     </div>
   </header>
   
