--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png">
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&subset=latin,latin-ext" rel="stylesheet">
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png"> 
   <link href="https://fonts.googleapis.com/css?family=Play:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> 
-  <title>Protect Power Systems | Российская торговая марка источников бесперебойного питания</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -24,7 +21,14 @@
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li class="header__nav-item"><a href="#" class="header__nav-link">Главная</a></li> 
-            <li class="header__nav-item"><a href="#" class="header__nav-link">Оборудование</a></li>
+            <li class="header__nav-item">
+              <a href="#" class="header__nav-link header__nav-link--js">
+                  <span>Оборудование</span>
+                  <svg class="header__icon-link">
+                      <use xlink:href="img/sprite.svg#icon-ctrl"></use>
+                  </svg>   
+              </a>
+            </li>
             <li class="header__nav-item"><a href="#" class="header__nav-link">Контакты</a></li>
           </ul>
         </nav>
@@ -41,6 +45,11 @@
             </svg>
             <span>info@upsprotect.ru</span>
           </a>
+          <a href="#" class="header__contact-link">
+              <svg class="header__contact-icon">
+                  <use xlink:href="img/sprite.svg#icon-search"></use>
+              </svg>
+            </a>
         </div>
       </div>
     </div>
