presentation section added

--- a/index.html
+++ b/index.html
@@ -10,10 +10,24 @@
 </head>
 <body>
   <header class="header">
-    <div class="header__bcg">
-      <img src="img/server-bcg.jpg" alt="ИБП для серверов" class="header__img">
+    <div class="header__presentation">
+      <div class="header__bcg">
+        <img src="img/server-bcg.jpg" alt="ИБП для серверов" class="header__img">
+      </div>
+      <div class="header__information">
+          <div class="header__left">
+            <img src="img/PowerNet-6-10-kVA-1-e1518294399406.png" alt="Protect 6-10kVA" class="header__presentation-img">
+          </div>
+          <div class="header__right"> 
+            <div class="header__heading-box"> 
+              <h1 class="heading-primary">Protect PowerNet 19″</h1>  
+              <h2 class="heading-secondary">Для решений в сфере IT</h2>
+              <a href="#" class="btn">Подробнее</a> 
+          </div>
+        </div>
+      </div> 
     </div>
-    <div class="header__top">
+      <div class="header__top">
       <ul class="header__container">
         <div class="header__logo-box">
           <a href="#" class="logo-link"><img src="img/LogoProtect_2.png" alt="Источники бесперебойного питания Protect" class="header__logo"></a>
