--- a/index.html
+++ b/index.html
@@ -7,28 +7,54 @@
   <link rel="shortcut icon" type="image/png" href="img/favicon.png"> 
   <link href="https://fonts.googleapis.com/css?family=Play:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="slick/slick-theme.css">
+  <link rel="stylesheet" href="slick/slick.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- HEADER -->
   <header class="header">
-    <div class="header__presentation">
-      <div class="header__bcg">
-        <img src="img/server-bcg.jpg" alt="ИБП для серверов" class="header__img">
-      </div>
-      <div class="header__information">
+    <!-- SLIDER -->
+    <div class="slider">
+      <div class="header__presentation">
+        <div class="header__bcg">
+          <img src="img/server-bcg.jpg" alt="ИБП для серверов" class="header__img">
+        </div>
+        <div class="header__information">
           <div class="header__left">
             <img src="img/PowerNet-6-10-kVA-1-e1518294399406.png" alt="Protect 6-10kVA" class="header__presentation-img">
           </div>
           <div class="header__right"> 
             <div class="header__heading-box"> 
-              <h1 class="heading-primary">Protect PowerNet 19″</h1>  
-              <h2 class="heading-secondary">Для решений в сфере IT</h2>
+              <h1 class="heading-primary">Protect PowerNet 19"</h1>  
+              <h2 class="heading-secondary">1-10 кВА</h2>
+              <h3 class="heading-tertiary">Для решений в сфере IT</h3>
               <a href="#" class="btn">Подробнее</a> 
+            </div>  
           </div>
+        </div> 
+      </div>
+
+      <div class="header__presentation">
+          <div class="header__bcg">
+            <img src="img/ofice-bcg.jpg" alt="ИБП для серверов" class="header__img">
+          </div>
+          <div class="header__information">
+              <div class="header__left">
+                <img src="img/PowerLite-33-40-kVA-EB.png" alt="Protect 6-10kVA PowerLite 33-40kVA" class="header__presentation-img">
+              </div>
+              <div class="header__right"> 
+                <div class="header__heading-box"> 
+                  <h1 class="heading-primary">Protect PowerLite 33</h1>
+                  <h2 class="heading-secondary">10-40 кВА</h2> 
+                  <h3 class="heading-tertiary">Надежное решение для офисов и частных домов</h3>
+                  <a href="#" class="btn">Подробнее</a> 
+              </div>
+            </div>
+          </div> 
         </div>
-      </div> 
     </div>
+
       <div class="header__top">
       <ul class="header__container">
         <div class="header__logo-box">
@@ -71,5 +97,8 @@
     </div>
   </header>
   
+  <script src="js/jquery.js"></script>
+  <script src="slick/slick.min.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
