--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
   <link rel="shortcut icon" type="image/png" href="img/favicon.png"> 
   <link href="https://fonts.googleapis.com/css?family=Play:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
-  <link rel="stylesheet" href="slick/slick-theme.css">
-  <link rel="stylesheet" href="slick/slick.css">
+  <link rel="stylesheet" href="bxslider/dist/jquery.bxslider.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- HEADER -->
-  <header class="header">
     <!-- SLIDER -->
     <div class="slider">
       <div class="header__presentation">
@@ -35,7 +33,7 @@
         </div> 
       </div>
 
-      <div class="header__presentation">
+      <div class="header__presentation"> 
           <div class="header__bcg">
             <img src="img/ofice-bcg.jpg" alt="ИБП для серверов" class="header__img">
           </div>
@@ -98,7 +96,7 @@
   </header>
   
   <script src="js/jquery.js"></script>
-  <script src="slick/slick.min.js"></script>
+  <script src="bxslider/dist/jquery.bxslider.min.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
