--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <!-- HEADER -->
     <!-- SLIDER -->
+    <!--SLIDE-1-->
     <div class="slider">
       <div class="header__presentation">
         <div class="header__bcg">
@@ -33,28 +34,48 @@
         </div> 
       </div>
 
+      <!--SLIDE-2-->
       <div class="header__presentation"> 
-          <div class="header__bcg">
-            <img src="img/ofice-bcg.jpg" alt="ИБП для серверов" class="header__img">
-          </div>
-          <div class="header__information">
-              <div class="header__left">
-                <img src="img/PowerLite-33-40-kVA-EB.png" alt="Protect 6-10kVA PowerLite 33-40kVA" class="header__presentation-img">
-              </div>
-              <div class="header__right"> 
-                <div class="header__heading-box"> 
-                  <h1 class="heading-primary">Protect PowerLite 33</h1>
-                  <h2 class="heading-secondary">10-40 кВА</h2> 
-                  <h3 class="heading-tertiary">Надежное решение для офисов и частных домов</h3>
-                  <a href="#" class="btn">Подробнее</a> 
-              </div>
-            </div>
-          </div> 
+        <div class="header__bcg">
+          <img src="img/ofice-bcg.jpg" alt="ИБП для серверов" class="header__img">
         </div>
+        <div class="header__information">
+          <div class="header__left">
+            <img src="img/PowerLite-33-40-kVA-EB.png" alt="Protect 6-10kVA PowerLite 33-40kVA" class="header__presentation-img">
+          </div>
+          <div class="header__right"> 
+            <div class="header__heading-box"> 
+              <h1 class="heading-primary">Protect PowerLite 33</h1>
+              <h2 class="heading-secondary">10-40 кВА</h2> 
+              <h3 class="heading-tertiary">Надежное решение для офисов и частных домов</h3>
+              <a href="#" class="btn">Подробнее</a> 
+            </div>
+          </div>
+        </div> 
+      </div>
+              <!--SLIDE-2-->
+      <div class="header__presentation"> 
+        <div class="header__bcg">
+          <img src="img/ofice-bcg.jpg" alt="ИБП для серверов" class="header__img">
+        </div>
+        <div class="header__information">
+            <div class="header__left">
+              <img src="img/PowerLite-33-40-kVA-EB.png" alt="Protect 6-10kVA PowerLite 33-40kVA" class="header__presentation-img">
+            </div>
+            <div class="header__right"> 
+              <div class="header__heading-box"> 
+                <h1 class="heading-primary">Protect PowerLite 33</h1>
+                <h2 class="heading-secondary">10-40 кВА</h2> 
+                <h3 class="heading-tertiary">Надежное решение для офисов и частных домов</h3>
+                <a href="#" class="btn">Подробнее</a> 
+            </div>
+          </div>
+        </div> 
+      </div>
     </div>
 
-      <div class="header__top">
-      <ul class="header__container">
+    <div class="header__top">
+      <div class="header__container">
         <div class="header__logo-box">
           <a href="#" class="logo-link"><img src="img/LogoProtect_2.png" alt="Источники бесперебойного питания Protect" class="header__logo"></a>
         </div>
