add slides3 and 4

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <!--SLIDE-2-->
       <div class="header__presentation"> 
         <div class="header__bcg">
-          <img src="img/ofice-bcg.jpg" alt="ИБП для серверов" class="header__img">
+          <img src="img/ofice-bcg.jpg" alt="ИБП для дома и офисов" class="header__img">
         </div>
         <div class="header__information">
           <div class="header__left">
@@ -53,25 +53,44 @@
           </div>
         </div> 
       </div>
-              <!--SLIDE-2-->
+      <!--SLIDE-3-->
       <div class="header__presentation"> 
         <div class="header__bcg">
-          <img src="img/ofice-bcg.jpg" alt="ИБП для серверов" class="header__img">
+          <img src="img/med.bcg.jpg" alt="ИБП для критичной нагрузки" class="header__img">
         </div>
         <div class="header__information">
             <div class="header__left">
-              <img src="img/PowerLite-33-40-kVA-EB.png" alt="Protect 6-10kVA PowerLite 33-40kVA" class="header__presentation-img">
+              <img src="img/PowerConcept-33-500-kVA.png" alt="Protect PowerConcept-33-500-kVA.png" class="header__presentation-img">
             </div>
             <div class="header__right"> 
               <div class="header__heading-box"> 
-                <h1 class="heading-primary">Protect PowerLite 33</h1>
-                <h2 class="heading-secondary">10-40 кВА</h2> 
-                <h3 class="heading-tertiary">Надежное решение для офисов и частных домов</h3>
+                <h1 class="heading-primary">Protect PowerConcept 33</h1>
+                <h2 class="heading-secondary">60-120 кВА</h2> 
+                <h3 class="heading-tertiary">Решения для промышленности</h3>
                 <a href="#" class="btn">Подробнее</a> 
             </div>
           </div>
         </div> 
       </div>
+      <!--SLIDE-4-->
+      <div class="header__presentation"> 
+        <div class="header__bcg">
+          <img src="img/mnpz-bcg.jpg" alt="ИБП для крупных предприятий" class="header__img">
+        </div>
+        <div class="header__information">
+            <div class="header__left">
+              <img src="img/PowerConcept-33-500-kVA.png" alt="Protect PowerConcept-33-500-kVA.png" class="header__presentation-img">
+            </div>
+            <div class="header__right"> 
+              <div class="header__heading-box"> 
+                <h1 class="heading-primary">Protect PowerPro 33</h1>
+                <h2 class="heading-secondary">100-500 кВА</h2> 
+                <h3 class="heading-tertiary">Для критичной нагрузки</h3>
+                <a href="#" class="btn">Подробнее</a> 
+            </div>
+          </div>
+        </div> 
+      </div>      
     </div>
 
     <div class="header__top">
