add section presentation

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
     </div>
   </header>
   
+  <section class="presentation">
+    
+  </section> 
+
   <script src="js/jquery.js"></script>
   <script src="bxslider/dist/jquery.bxslider.min.js"></script>
   <script src="js/index.js"></script>
